hard-gists/273bef4c5b4490c687b2f92ee721b546/run.log
=== Docker Run Log for 273bef4c5b4490c687b2f92ee721b546 ===
Started at: Mi 29. Okt 13:12:47 CET 2025

[2025-10-29 13:12:47] START: Running container for 273bef4c5b4490c687b2f92ee721b546
[2025-10-29 13:12:47] SUCCESS: Container 83c82f3cff7afd7b421a749009df85afd152d0f080acb04d8261f809a3c0306f started for 273bef4c5b4490c687b2f92ee721b546
=== Container logs for 273bef4c5b4490c687b2f92ee721b546 ===
  File "/snippet.py", line 30
    print imgarray.shape
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 273bef4c5b4490c687b2f92ee721b546 ===
[2025-10-29 13:12:49] INFO: Container 83c82f3cff7afd7b421a749009df85afd152d0f080acb04d8261f809a3c0306f has stopped
